# psl_rag

./: .env-template  .env.example  .gitignore  PARQUET_STRUCTURE_ANALYSIS.md  README_LanceDB.md  USAGE_GUIDE.md  lance_db_server.py  lance_server.py  mattia-gemini.py  parquet_schemas.py  pyproject.toml  test_lance_server.py
.github/: copilot-instructions.md
data/: questions-benchmark.txt
modules/: __init__.py  embedder.py  flask_server.py  lance_db_manager.py  schemas.py
