[project]
name = "psl-rag"
version = "0.1.0"
description = "Cleaning data for student-facing Q&A chatbot using Retrieval-Augmented Generation"
authors = [
    {name = "NEVEROV iaroslav",email = "beeguy74@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
